@@ -2,25 +2,28 @@ package manager;
 
 import task.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private final List<Task> history = new ArrayList<>();
+    private final List<Task> history = new LinkedList<>();
+    private static final int MAX_HISTORY_SIZE = 10;
 
     @Override
     public void add(Task task) {
-        if (task != null) {
-            history.add(task);
-            if (history.size() > 10) {
-                history.remove(0);
-            }
+        if (task == null) {
+            return;
+        }
+
+        history.add(task);
+        if (history.size() > MAX_HISTORY_SIZE) {
+            history.removeFirst();
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        return List.copyOf(history);
     }
 }
